kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blogapp-service
  namespace: blogapp
spec:
  selector:
    app: blogapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
